--- a/app/src/main/res/layout/new_fragment_recycler_list.xml
+++ b/app/src/main/res/layout/new_fragment_recycler_list.xml
@@ -2,7 +2,7 @@
     <data>
         <variable
             name="ViewObject"
-            type="com.gregorajdergmail.mymike.vm.viewObject.NewListVO" />
+            type="com.gregorajdergmail.mymike.viewmodel.viewObject.NewListVO" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
