--- a/app/src/main/res/layout/new_list_item.xml
+++ b/app/src/main/res/layout/new_list_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="vo"
-            type="com.gregorajdergmail.mymike.vm.viewObject.TrackVO" />
+            type="com.gregorajdergmail.mymike.viewmodel.viewObject.TrackVO" />
     </data>
 
     <FrameLayout
